[package]
name = "tang-rs"
version = "0.1.3"
authors = ["fakeshadow <24548779@qq.com>"]
edition = "2018"
description = "A light weight asynchronous connection pool"
keywords = ["async", "pool"]
license = "MIT"
exclude = ["examples/*"]
repository = "https://github.com/fakeshadow/tang_rs"
readme= "README.md"

[lib]
name = "tang_rs"
path = "src/lib.rs"

[features]
default = []

[workspace]
members = [
    "examples/actix_web_example",
    "examples/basic_example",
    "examples/ntex_example",
    "examples/rocket_example",
    "examples/raw_example",
    "examples/tide_example",
    "tokio_postgres_tang",
    "redis_tang",
    "mongodb_tang"
]

[dev-dependencies.async-std]
version = "1.5.0"
features = ["attributes", "unstable"]