[package]
name = "tang-rs"
version = "0.2.0"
authors = ["fakeshadow <24548779@qq.com>"]
edition = "2018"
description = "A light weight asynchronous connection pool"
keywords = ["async", "pool"]
license = "MIT"
exclude = ["examples/*", "benches/*", "tests/*"]
repository = "https://github.com/fakeshadow/tang_rs"
readme= "README.md"

[lib]
name = "tang_rs"
path = "src/lib.rs"

[features]
default = []
no-send = []

[workspace]
members = [
    "examples/actix_web_example",
    "examples/basic_example",
    "examples/ntex_example",
    "examples/rocket_example",
    "examples/raw_example",
    "examples/tide_example",
    "tokio_postgres_tang",
    "redis_tang",
    "mongodb_tang"
]

[dependencies]
cache-padded = ""

[dev-dependencies.async-std]
version = "1.6.0"
features = ["attributes", "unstable"]

[dev-dependencies.smol]
version = "0.1.10"

[dev-dependencies.tokio]
version = "0.2.21"
features = ["full"]

[profile.bench]
opt-level = 3
debug = false
lto = true
debug-assertions = false