[package]
name = "tang-rs"
version = "0.2.0"
authors = ["fakeshadow <24548779@qq.com>"]
edition = "2018"
description = "A light weight asynchronous connection pool"
keywords = ["async", "pool"]
license = "MIT"
exclude = ["examples/*", "benches/*", "tests/*"]
repository = "https://github.com/fakeshadow/tang_rs"
readme= "README.md"

[lib]
name = "tang_rs"
path = "src/lib.rs"

[features]
default = []
no-send = []

[workspace]
members = [
    "examples/actix_web_example",
    "examples/basic_example",
    "examples/ntex_example",
    "examples/rocket_example",
    "examples/raw_example",
    "examples/tide_example",
    "tokio_postgres_tang",
    "redis_tang",
    "mongodb_tang"
]

[dependencies]
cache-padded = "1.1.1"

[dev-dependencies]
async-std = { version = "1.6.2", features = ["attributes", "unstable"] }
futures = { version = "0.3.5" }
num_cpus = "1.13.0"
smol = "0.1.10"
tokio = { version = "0.2.21", features = ["full"] }

[profile.bench]
opt-level = 3
debug = false
lto = true
debug-assertions = false