[package]
name = "mongodb_tang"
version = "0.1.0"
authors = ["fakeshadow <24548779@qq.com>"]
edition = "2018"

[dependencies.bson]
version = "0.14.1"

[dependencies.mongodb]
version = "0.9.2"

[dependencies.tang-rs]
path = "../"

[dependencies.tokio]
version = "0.2.19"
default-features = false
features = ["rt-threaded", "time"]