[package]
name = "redis_tang"
version = "0.3.0"
authors = ["fakeshadow <24548779@qq.com>"]
edition = "2018"
description = "A light weight asynchronous connection pool for redis-rs"
keywords = ["async", "redis", "pool"]
license = "MIT"
repository = "https://github.com/fakeshadow/tang_rs"
readme= "README.md"

[lib]
name = "redis_tang"
path = "src/lib.rs"

[features]
default = ["with-tokio"]
with-tokio = ["tang-rs", "redis/tokio-comp", "tokio/time"]
with-async-std = ["tang-rs", "async-std/unstable", "redis/async-std-comp", "smol"]
with-ntex = ["tang-rs/no-send", "tokio/time", "redis/tokio-comp"]

[dependencies]
async-std = { version = "1.5.0", default-features = false, optional = true }
redis = { version = "0.21", default-features = false, optional = true }
smol = { version = "1", optional = true }
tokio = { version = "1", default-features = false, optional = true }

tang-rs = { version = "0.2.0", default-features = false, optional = true }
