[package]
name = "tokio_postgres_tang"
version = "0.1.0"
authors = ["fakeshadow <24548779@qq.com>"]
edition = "2018"

[features]
default = ["with-tokio"]
with-tokio = ["tang-rs", "tokio/rt-threaded", "tokio/time", "tokio-postgres/runtime"]
with-async-std = ["tang-rs", "async-postgres", "async-std/unstable", "tokio-postgres"]
with-ntex = [ "tang-rs/no-send", "tokio/time", "tokio/rt-util", "tokio-postgres/runtime"]

[dependencies.async-postgres]
version = "0.5.0"
default-features = false
optional = true

[dependencies.async-std]
version = "1.6.0"
default-features = false
optional = true

[dependencies.futures-util]
version = "0.3.4"
default-features = false

[dependencies.tang-rs]
path = "../"
default-features = false
optional = true

[dependencies.tokio-postgres]
version = "0.5.3"
optional = true

[dependencies.tokio]
version = "0.2.20"
default-features = false
optional = true
