[package]
name = "actix-web-example"
version = "0.1.0"
workspace = "../../"
edition = "2018"
publish = false

[dependencies.actix]
version = "0.8.3"

[dependencies.actix-web]
version = "1.0.8"
default-features = false

[dependencies.once_cell]
version = "1.2.0"

[dependencies.serde]
version = "1.0.101"
default-features = false

[dependencies.serde_derive]
version = "1.0.101"

[dependencies.futures-util-preview]
version = "=0.3.0-alpha.19"

[dependencies.tokio]
version = "=0.2.0-alpha.6"
default-features = false
features = [ "io", "codec", "fs" ]

[dependencies.tokio-postgres]
version = "0.5.0-alpha.1"

[dependencies.redis]
git = "https://github.com/Marwes/redis-rs"
branch = "async_await_api"
default-features = false
features = [ "tokio-executor" ]

[dependencies.tang-rs]
path = "../../"
features = ["actix-web", "tokio-postgres", "redis"]