[package]
name = "actix-web-example"
version = "0.1.0"
workspace = "../../"
edition = "2018"
publish = false

[dependencies.actix-rt]
default-features = false
version = "1.0.0-alpha.1"

[dependencies.actix-web]
default-features = false
git = "https://github.com/actix/actix-web.git"

[dependencies.futures-util]
version = "=0.3.1"

[dependencies.once_cell]
version = "1.2.0"

[dependencies.redis]
git = "https://github.com/Marwes/redis-rs"
branch = "async_await_api"
default-features = false
features = ["tokio-rt-core"]

[dependencies.serde]
version = "1.0.101"
default-features = false

[dependencies.serde_derive]
version = "1.0.101"

[dependencies.tang-rs]
path = "../../"
features = ["tokio-postgres", "redis"]

[dependencies.tokio-postgres]
git = "https://github.com/sfackler/rust-postgres"
