[package]
name = "actix-web-example"
version = "0.1.0"
authors = ["fakeshadow <24548779@qq.com>"]
edition = "2018"

[dependencies.actix-rt]
version = "1.1.0"

[dependencies.actix-web]
version = "3.0.0-alpha.1"

[dependencies.futures-util]
version = "0.3.4"

[dependencies.once_cell]
version = "1.2.0"

[dependencies.redis-tang]
path = "../../redis-tang"

[dependencies.redis]
version = "0.15.1"
default-features = false
features = ["tokio-rt-core"]

[dependencies.serde]
version = "1.0.101"
default-features = false

[dependencies.serde_derive]
version = "1.0.101"

[dependencies.tokio-postgres]
version = "0.5.3"

[dependencies.tokio-postgres-tang]
path = "../../tokio-postgres-tang"
