[package]
name = "actix_web_example"
version = "0.1.0"
workspace = "../../"
edition = "2018"
publish = false

[dependencies]
actix-web = "3.0.0-beta.3"
futures-util = "0.3.5"
once_cell = "1.4.0"
redis = { version = "0.16.0", default-features = false, features = ["tokio-rt-core"] }
redis_tang = { path = "../../redis_tang" }
serde = { version = "1.0.101", default-features = false }
serde_derive = "1.0.101"
tokio = "0.2.22"
tokio-postgres = "0.5.5"
tokio_postgres_tang = { path = "../../tokio_postgres_tang" }
