[package]
name = "tang-example-raw"
version = "0.1.0"
workspace = "../../"
edition = "2018"
publish = false

[dependencies.futures-preview]
version = "=0.3.0-alpha.19"
features = [ "async-await" ]

[dependencies.tokio]
version = "=0.2.0-alpha.6"
default-features = false
features = [ "io", "codec", "fs" ]

[dependencies.tokio-postgres]
version = "0.5.0-alpha.1"

[dependencies.redis]
git = "https://github.com/Marwes/redis-rs"
branch = "async_await_api"
default-features = false
features = [ "tokio-executor" ]

[dependencies.tang-rs]
path = "../../"
features = ["tokio-postgres", "redis"]