[package]
name = "tang-example-raw"
version = "0.1.0"
workspace = "../../"
edition = "2018"
publish = false

[dependencies.redis]
git = "https://github.com/Marwes/redis-rs"
branch = "async_await_api"
default-features = false
features = ["tokio-rt-core"]

[dependencies.tang-rs]
path = "../../"
features = ["tokio-postgres", "redis"]

[dependencies.tokio]
version = "=0.2.1"
features = ["full"]

[dependencies.tokio-postgres]
git = "https://github.com/sfackler/rust-postgres"