[package]
name = "tang-example-raw"
version = "0.1.0"
workspace = "../../"
edition = "2018"
publish = false

[dependencies.redis]
version = "0.15.1"
default-features = false
features = ["tokio-rt-core"]

[dependencies.redis-tang]
path = "../../redis-tang"

[dependencies.tokio-postgres-tang]
path = "../../tokio-postgres-tang"

[dependencies.tokio-postgres]
version = "0.5.3"

[dependencies.tokio]
version = "0.2.16"
features = ["full"]
