[package]
name = "raw_example"
version = "0.1.0"
workspace = "../../"
edition = "2018"
publish = false

[dependencies.redis]
version = "0.16.0"
default-features = false
features = ["tokio-rt-core"]

[dependencies.redis_tang]
path = "../../redis_tang"

[dependencies.tokio_postgres_tang]
path = "../../tokio_postgres_tang"

[dependencies.tokio-postgres]
version = "0.5.3"

[dependencies.tokio]
version = "0.2.16"
features = ["full"]
