[package]
name = "tang-example-rocket"
version = "0.1.0"
workspace = "../../"
edition = "2018"
publish = false

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
branch = "async"

[dependencies.serde_json]
version = "1.0.40"

[dependencies.serde]
version = "1.0.101"
default-features = false

[dependencies.serde_derive]
version = "1.0.101"

[dependencies.tokio]
version = "=0.2.0-alpha.6"
default-features = false
features = [ "io", "codec", "fs" ]

[dependencies.futures-preview]
version = "=0.3.0-alpha.19"
features = [ "compat", "async-await" ]

[dependencies.tokio-postgres]
git = "https://github.com/sfackler/rust-postgres"

[dependencies.postgres-types]
git = "https://github.com/sfackler/rust-postgres"

[dependencies.redis]
git = "https://github.com/fakeshadow/redis-rs"
branch = "async_await_api"

[dependencies.tang-rs]
path = "../../"
features = [ "default", "tokio-postgres" ]