[package]
name = "tang-example-rocket"
version = "0.1.0"
workspace = "../../"
edition = "2018"
publish = false

[dependencies.futures-util]
version = "0.3.4"

[dependencies.redis]
version = "0.15.1"
default-features = false
features = ["tokio-rt-core"]

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
branch = "async"

[dependencies.serde]
version = "1.0.101"
default-features = false

[dependencies.serde_derive]
version = "1.0.101"

[dependencies.serde_json]
version = "1.0.40"

[dependencies.tang-rs]
path = "../../"
features = ["tokio-postgres", "redis"]

[dependencies.tokio]
version = "0.2.16"
features = ["full"]

[dependencies.tokio-postgres]
version = "0.5.3"

