[package]
name = "rocket_example"
version = "0.1.0"
workspace = "../../"
edition = "2018"
publish = false

[dependencies.futures-util]
version = "0.3.4"

[dependencies.redis]
git = "https://github.com/mitsuhiko/redis-rs.git"
default-features = false
features = ["tokio-rt-core"]

[dependencies.redis_tang]
path = "../../redis_tang"

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
branch = "async"

[dependencies.serde]
version = "1.0.101"
default-features = false

[dependencies.serde_derive]
version = "1.0.101"

[dependencies.serde_json]
version = "1.0.40"

[dependencies.tokio]
version = "0.2.16"
features = ["full"]

[dependencies.tokio-postgres]
version = "0.5.3"

[dependencies.tokio_postgres_tang]
path = "../../tokio_postgres_tang"

