[package]
name = "rocket_example"
version = "0.1.0"
workspace = "../../"
edition = "2018"
publish = false

[dependencies.futures-util]
version = "0.3.5"

[dependencies.redis]
version = "0.17.0"
default-features = false
features = ["tokio-rt-core"]

[dependencies.redis_tang]
path = "../../redis_tang"

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"

[dependencies.serde]
version = "1.0.116"
default-features = false

[dependencies.serde_derive]
version = "1.0.116"

[dependencies.serde_json]
version = "1.0.57"

[dependencies.tokio-postgres]
version = "0.5.5"

[dependencies.tokio_postgres_tang]
path = "../../tokio_postgres_tang"