[package]
name = "tide_example"
version = "0.1.0"
workspace = "../../"
edition = "2018"
publish = false

[dependencies.async-std]
version = "1.5.0"
features = ["attributes"]

[dependencies.futures-util]
version = "0.3.4"

[dependencies.redis]
git = "https://github.com/mitsuhiko/redis-rs.git"
default-features = false
features = ["async-std-comp"]

[dependencies.redis_tang]
path = "../../redis_tang"
default-features = false
features = ["with-async-std"]

[dependencies.tide]
version = "0.8.0"

[dependencies.tokio-postgres]
version = "0.5.3"

[dependencies.tokio_postgres_tang]
path = "../../tokio_postgres_tang"
default-features = false
features = ["with-async-std"]